<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="300dp">

    <RelativeLayout
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/ic_friendship"
            android:id="@+id/view_feed_publisher_avatar"
            android:layout_centerVertical="true"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/app_name"/>
        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@android:drawable/ic_media_play"
            android:background="@null"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            />
        <LinearLayout
            android:orientation="vertical"
            android:layout_toEndOf="@id/view_feed_publisher_avatar"
            android:layout_toRightOf="@id/view_feed_publisher_avatar"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:singleLine="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publisher_name"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:id="@+id/view_feed_publisher_name"/>
            <TextView
                android:singleLine="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/view_feed_publication_time_ago"
                android:text="@string/time_ago"/>
        </LinearLayout>

    </RelativeLayout>

    <android.support.v4.view.ViewPager
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/view_feed_image_pager"/>

    <RelativeLayout
        android:background="@color/colorPrimary"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <Button
            android:textColor="@color/colorAccent"
            android:layout_alignParentLeft="true"
            android:id="@+id/view_feed_react"
            android:text="@string/interact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center"/>

        <Button
            android:textColor="@color/colorAccent"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:id="@+id/view_feed_comment"
            android:text="@string/comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"/>

        <Button
            android:textColor="@color/colorAccent"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:id="@+id/view_feed_share"
            android:text="@string/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"/>
    </RelativeLayout>

</RelativeLayout>